--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -1,113 +1,126 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US" dir="ltr">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="manifest" href="/resources/assets/images/favicons/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/resources/assets/images/favicons/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+    <!--
+    Stylesheets
+    =============================================
+
+    -->
+    <!-- Default stylesheets-->
+    <link href="/resources/assets/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Template specific stylesheets-->
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Volkhov:400i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
+    <link href="/resources/assets/lib/animate.css/animate.css" rel="stylesheet">
+    <link href="/resources/assets/lib/components-font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="/resources/assets/lib/et-line-font/et-line-font.css" rel="stylesheet">
+    <link href="/resources/assets/lib/flexslider/flexslider.css" rel="stylesheet">
+    <link href="/resources/assets/lib/owl.carousel/dist//resources/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="/resources/assets/lib/owl.carousel/dist//resources/assets/owl.theme.default.min.css" rel="stylesheet">
+    <link href="/resources/assets/lib/magnific-popup/dist/magnific-popup.css" rel="stylesheet">
+    <link href="/resources/assets/lib/simple-text-rotator/simpletextrotator.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <!-- Main stylesheet and color file-->
+    <link href="/resources/assets/css/style.css" rel="stylesheet">
+    <link id="color-scheme" href="/resources/assets/css/colors/default.css" rel="stylesheet">
+</head>
 <style>
+        #join_wrap {
+            width: 800px;
+            margin: 200px;
+        }
 
-    * {
-        margin-right: 10;
-        padding: 10;
-    }
+        #join_wrap .title{
+            padding: 50px 0 20px;
+            font-size: 2em;
+        }
+        .joinTable th, joinTable td {
+            padding: 0px;
+            box-sizing: border-box;
+            border-bottom: 1px solid #ddd;
+            border-radius: 5px;
+        }
 
-    fieldset {
-        border: 0;
-        padding: 20px;
-        margin-left: 150px;
-    }
+        .joinTable th {
+            text-align: center;
+            background-color: #cccccc;
+            width: 100px;
 
-    table {
-        border-collapse: collapse;
-    }
+        }
 
-    caption {
-        position: absolute;
-        left: 9999em;
-    }
+        .joinTable .textForm {
+            width: 300px;
+            height: 30px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            padding: 0 10px;
+            box-sizing: border-box;
 
-    body {
-        font-size: 16px;
-        color: #333;
-    }
+        }
 
-    #join_wrap {
-        width: 800px;
-        margin: 100px;
-    }
 
-    /*#join_wrap .title{*/
-    /*    padding: 50px 0 20px;*/
-    /*    font-size: 2em;*/
-    /*}*/
-    .joinTable th, joinTable td {
-        padding: 10px;
-        box-sizing: border-box;
-        border-bottom: 1px solid #ddd;
-    }
+        .joinTable textarea {
+            /*width: 420px;*/
+            height: 80px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            padding: 10px;
+            box-sizing: border-box;
+        }
 
-    .joinTable th {
-        text-align: center;
-        background-color: #cccccc;
-        width: 150px;
-    }
+        .joinTable {
+            text-align: center;
+            margin: 13px -70px 40px 0px;
+        }
 
-    .joinTable .first {
-        border-top: 1px solid #333;
-    }
+        .btn_area button {
+            width: 150px;
+            height: 50px;
+            margin: 0 10px;
+            border: 0;
+            font-size: 20px;
+            position: static;
+            bottom: auto;
+            border-radius: 5px;
+        }
 
-    .joinTable .textForm {
-        width: 150px;
-        height: 30px;
-        border: 1px solid #ddd;
-        border-radius: 5px;
-        padding: 0 10px;
-        box-sizing: border-box;
-    }
+        h2 {
+            text-align: center;
+            margin-top: 200px;
+        }
 
-    /*중복확인버튼*/
-    .joinTable .btn {
-        width: auto;
-        height: auto;
-        border: 0;
-        background-color: black;
-        border-radius: 5px;
-        color: #fff;
-    }
+        body {
+            text-align: -webkit-center;
 
-    .joinTable textarea {
-        width: 420px;
-        height: 80px;
-        border: 1px solid #ddd;
-        border-radius: 5px;
-        padding: 10px;
-        box-sizing: border-box;
-    }
+        }
 
-    .btn_area {
-        text-align: center;
-        margin: 20px 0;
-    }
+        section {
+            margin-top: -100px;
+            line-height: 80px;
+        }
 
-    .btn_area button {
-        width: 200px;
-        height: 50px;
-        margin: 0 10px;
-        border: 0;
-        font-size: 20px;
-        position: static;
-        bottom: auto;
-        border-radius: 5px;
-    }
+        input {
+            display: block;
+            width: 500px;
+        }
 
-    .btn_area .btn_join {
-        background-color: black;
-        color: #fff;
-    }
 
-    .joinForm {
-        margin-right: 100px;
-    }
+        tr>td {
+            padding-left: 20px;
+            padding-right: 20px;
+        }
 
-    h2 {
-        text-align: center;
-    }
 </style>
 
 <head>
@@ -116,45 +129,63 @@
 </head>
 <body>
 <th:block th:replace="fragment/head :: headFragment"></th:block>
+<section class="module">
+    <div id="join_wrap">
+        <!-- 회원가입 테이블-->
 
-<div id="join_wrap">
-    <h2>회원가입</h2>
-    <form action="a.html" method="get">
-    </form>
+            <h2>회원가입</h2>
 
+                <form class="joinForm">
+                    <table class="joinTable">
+                        <tr>
+                            <td><label for="user_id">아이디</label></td>
+                            <td class="td_long"><input type="text" id="user_id" class="textForm" placeholder="아이디를 입력하세요" required
+                                       autofocus>
+                                <td><button type="submit" class="btn btn-b btn-round">중복확인</button></td></td>
+                        </tr>
+                        <tr>
+                            <td><label for="user_pwd">비밀번호</label></td>
+                            <td><input type="password" id="user_pwd" class="textForm" placeholder="비밀번호를 입력하세요"></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td><label for="user_tel">전화번호</label></td>
+                            <td><input type="tel" id="user_tel" class="textForm" placeholder="전화번호를 입력하세요"></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td><label for="user_name">닉네임</label></td>
+                            <td><input type="text" id="user_name" class="textForm" placeholder="닉네임을 입력하세요"</td>
+                            <td></td>
+                        </tr>
+<tr>
+    <td></td>
+    <td> <button type="submit" class="btn btn-b btn-round" style="width:100%">회원가입</button></td>
+</tr>
 
-    <!-- 회원가입 테이블-->
-    <fieldset>
-        <form class="joinForm">
-            <table class="joinTable">
-                <caption>회원가입 필수 입력표</caption>
-                <tr>
-                    <th class="first"><label for="user_id">아이디</label></th>
-                    <td><input type="text" id="user_id" class="textForm" placeholder="아이디를 입력하세요" required autofocus>
-                        <input type="button" value="중복확인" class="btn"></td>
-                </tr>
-                <tr>
-                    <th><label for="user_pwd">비밀번호</label></th>
-                    <td><input type="password" id="user_pwd" class="textForm" placeholder="비밀번호를 입력하세요"</td>
-                </tr>
-                <tr>
-                    <th><label for="user_tel">전화번호</label></th>
-                    <td><input type="tel" id="user_tel" class="textForm" placeholder="전화번호를 입력하세요"</td>
-                </tr>
-                <tr>
-                    <th><label for="user_name">닉네임</label></th>
-                    <td><input type="text" id="user_name" class="textForm" placeholder="닉네임을 입력하세요"</td>
-                </tr>
+                    </table>
 
-            </table>
-
-    </fieldset>
-
-    <div class="btn_area">
-        <button type="reset">취소</button>
-        <button type="submit" class="btn_join">회원가입</button>
+        </div>
+        </fieldset>
+        </form>
     </div>
-    </form>
-</div>
+</section>
+<script src="/resources/assets/lib/jquery/dist/jquery.js"></script>
+<script src="/resources/assets/lib/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="/resources/assets/lib/wow/dist/wow.js"></script>
+<script src="/resources/assets/lib/jquery.mb.ytplayer/dist/jquery.mb.YTPlayer.js"></script>
+<script src="/resources/assets/lib/isotope/dist/isotope.pkgd.js"></script>
+<script src="/resources/assets/lib/imagesloaded/imagesloaded.pkgd.js"></script>
+<script src="/resources/assets/lib/flexslider/jquery.flexslider.js"></script>
+<script src="/resources/assets/lib/owl.carousel/dist/owl.carousel.min.js"></script>
+<script src="/resources/assets/lib/smoothscroll.js"></script>
+<script src="/resources/assets/lib/magnific-popup/dist/jquery.magnific-popup.js"></script>
+<script src="/resources/assets/lib/simple-text-rotator/jquery.simple-text-rotator.min.js"></script>
+<script async="" defer=""
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDK2Axt8xiFYMBMDwwG1XzBQvEbYpzCvFU"></script>
+<script src="/resources/assets/js/plugins.js"></script>
+<script src="/resources/assets/js/main.js"></script>
+
+
 </body>
 </html>
