--- a/src/main/resources/templates/upload.html
+++ b/src/main/resources/templates/upload.html
@@ -32,6 +32,8 @@
     <link href="/resources/assets/css/style.css" rel="stylesheet">
     <link id="color-scheme" href="/resources/assets/css/colors/default.css" rel="stylesheet">
 
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.css">
+
 </head>
 <style>
     .modal {
@@ -43,17 +45,90 @@
     }
     .modal_body {
         position: absolute;
-        top: 50%;
+        top: 53%;
         left: 50%;
-        width: 500px;
-        height: 50px;
-        padding: 40px;
+        width: 600px;
+        /*height: 50px;*/
+        line-height: 100px;
+        padding: 30px;
         text-align: center;
         background-color: rgb(255, 255, 255);
         border-radius: 10px;
-        box-shadow: 0 2px 3px 0 rgba(34, 36, 38, 0.15);
-
+        box-shadow: 0 2px 3px 0 rgb(34 36 38 / 15%);
         transform: translateX(-50%) translateY(-50%);
+    }
+
+    .modal_body>h3 {
+        font-size: 35px;
+        margin: 30px 30px 30px 30px;
+
+    }
+    .col-sm-6 {
+        width: 100%;
+        margin-left: 25%;
+    }
+    img {
+        display: block;
+        margin: auto;
+    }
+    input {
+        text-align: right;
+    }
+
+    form {
+        margin: -150px;
+        margin-top: 50px;
+    }
+
+
+    #input_p {
+        margin: 24px 136px -34px 0px;
+        padding: 20px;
+    }
+    form>div {
+        height: 30px;
+        margin-top: 50px;
+    }
+
+    form>div>input {
+        display: inline-block;
+        width: 150px;
+        height: 40px;
+        margin: 0px 0px;
+    }
+    form>div>span {
+        margin: 0px 20px 0px 12px;
+        font-size: 20px;
+    }
+
+    span>a{
+        background-color: black;
+        padding: 4px 4px 4px;
+        border: 1px solid black;
+        border-radius: 5px;
+        display: inline-block;
+        height: 40px;
+        width: 150px;
+        font-size: 15px;
+        text-align: center;
+        line-height: 30px;
+        margin-left: 17px;
+    }
+
+    form>div {
+        height: 70px;
+    }
+    h3 {
+        margin: -40px 0px 10px 5px;
+        top: 20px;
+        font-size: 30px;
+
+    }
+    button.btn.btn-b {
+        background: #111111;
+        color: #fff;
+        font-size: 20px;
+        border-radius: 5px;
     }
 
 
@@ -66,28 +141,35 @@
     <section class="module">
         <div class="container">
             <div class="row">
-                    <section class="module-medium" id="contact">
+                <section class="module-medium" id="contact">
                     <h2 class="module-title font-alt">업로드</h2>
-                        <!--이미지 파일 첨부-->
-                        <div class="col-sm-6 col-sm-offset-3">
-                            <form>
-                                <table>
-                <pre>
-                    <img src="/images/file.png"/><input type="file" name="file">
-                </pre>
-                                    <td>중요하게 생각하는 사고시점</td>
-                                    <td><input type="time"> <span> : </span> <input type="time"></td>
+                    <hr class="divider-w pt-20">
+                    <!--이미지 파일 첨부-->
+                    <div class="col-sm-6 col-sm-offset-3">
+                        <form>
+                            <pre>
+                                <img src="/images/file.png"/><input id="input_p" type="file" name="file">
+                            </pre>
 
-                                </table>
-                            </form>
-                            <div class="row">
-                                <button class="btn btn-d btn-round btn-block" type="submit">업로드</button>
-                                <button class="btn-open-popup" type="submit"><a style="color:white">업로드</a></button>
-                                <!--<button class="btn btn-b btn-round" type="submit"><a style="color:white"></a></button>-->
+                            <div><span> 사고시점 입력 </span> <input class="timepicker"> <span> ~ </span> <input class="timepicker" type="text">
+                                <span>영상전체&nbsp;&nbsp;<input type="checkbox"></span>
+                                <span class="btn-open-popup" type="submit"><a style="color:white">업로드</a></span>
                             </div>
+
+                            <!--<button class="btn btn-b btn-round" type="submit"><a style="color:white"></a></button>-->
+                        </form>
+                        <div class="modal">
+                            <div class="modal_body">
+                            <button type="button" class="close" data-dismiss="modal">×</button>
+                            <h3>공유하시겠습니까?</h3>
+                                <button class="btn btn-b btn-round"><a href="myList" style="color: white">결과확인</a></button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                <button class="btn btn-b btn-round"><a href="write" style="color: white">공유하기</a></button></div>
                         </div>
 
-                    </section>
+
+                    </div>
+
+                </section>
             </div>
         </div>
     </section>
@@ -96,23 +178,42 @@
 </main>
 
 
-<div class="modal">
-    <div class="modal_body">공유하시겠습니까?
-        <button type="button" class="close" data-dismiss="modal">×</button>
-    <button class="btn btn-b btn-round"><a href="myList" style="color: white">결과확인</button>
-    <button class="btn btn-b btn-round"><a href="write" style="color: white">공유하기</a></button></div>
-</div>
+
 
 
 <script>
     const modal = document.querySelector('.modal');
-    const btnOpenPopup = document.querySelector('.btn btn-d btn-round btn-block');
+    const btnOpenPopup = document.querySelector('.btn-open-popup');
+    const btnClose = document.querySelector('.close');
 
     btnOpenPopup.addEventListener('click', () => {
         modal.style.display = 'block';
     });
+
+    btnClose.addEventListener('click', () => {
+        modal.style.display = 'none';
+    });
+
+
 </script>
 
 
+
+<script>
+    $(document).ready(function () {
+        $('input.timepicker').timepicker({
+            step:2,
+            showSecond: true,
+            timeFormat: 'HH:mm:ss',
+            /*interval: 0.1,*/
+            startTime: '00:00',
+            dynamic: false,
+            dropdown: true,
+            scrollbar: true
+        });
+    })
+</script>
+
+<script src="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.js"></script>
 </body>
 </html>
