--- a/src/main/resources/templates/admin/member_tables.html
+++ b/src/main/resources/templates/admin/member_tables.html
@@ -11,6 +11,17 @@
         <link href="/resources/assets/css/styles.css" rel="stylesheet" />
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
     </head>
+    <style>
+        .card.mb-4 {
+            padding-left: 0px;
+        }
+        body {
+            margin:50px;
+        }
+        .card-header {
+            font-weight: bold;
+        }
+    </style>
     <body class="sb-nav-fixed">
      <!--   <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
              Navbar Brand
@@ -433,7 +444,7 @@
                                             <td>San Francisco</td>
                                             <td>1</td>
                                             <td>41</td>
-                                            <td>X/td>
+                                            <td>X</td>
                                         </tr>
                                         <tr>
                                             <td>Vivian Harrell</td>
@@ -593,6 +604,9 @@
                         </div>
                     </div>
                 </main>
+
+
+
                 <footer class="py-4 bg-light mt-auto">
                     <div class="container-fluid px-4">
                         <div class="d-flex align-items-center justify-content-between small">
@@ -605,5 +619,6 @@
         <script src="/resources/assets/js/scripts.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/simple-datatables@latest" crossorigin="anonymous"></script>
         <script src="/resources/assets/js/datatables-simple-demo.js"></script>-->
+
     </body>
 </html>
