--- a/src/main/resources/templates/write.html
+++ b/src/main/resources/templates/write.html
@@ -3,17 +3,16 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
 
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="/resources/assets/images/favicons/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/resources/assets/images/favicons/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
-    <link href="/resources/assets/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Volkhov:400i" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
+    <!-- Default stylesheets-->
+
+    <!-- Template specific stylesheets-->
     <link href="/resources/assets/lib/animate.css/animate.css" rel="stylesheet">
     <link href="/resources/assets/lib/components-font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <link href="/resources/assets/lib/et-line-font/et-line-font.css" rel="stylesheet">
@@ -22,139 +21,151 @@
     <link href="/resources/assets/lib/owl.carousel/dist/assets/owl.theme.default.min.css" rel="stylesheet">
     <link href="/resources/assets/lib/magnific-popup/dist/magnific-popup.css" rel="stylesheet">
     <link href="/resources/assets/lib/simple-text-rotator/simpletextrotator.css" rel="stylesheet">
+
+    <link href="/resources/assets/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <!-- Main stylesheet and color file-->
     <link href="/resources/assets/css/style.css" rel="stylesheet">
     <link id="color-scheme" href="/resources/assets/css/colors/default.css" rel="stylesheet">
+
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.css">
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
 </head>
+
+<style>
+    body,.main{
+        padding-right: 0 !important;
+    }
+    .modal-open { padding-right: 0px !important; }
+    .modal { padding-right: 0px !important; }
+
+</style>
 <body data-spy="scroll" data-target=".onpage-navigation" data-offset="60">
 
 
-    <th:block th:replace="fragment/head :: headFragment"></th:block>
+<th:block th:replace="fragment/head :: headFragment"></th:block>
 
 
-    <main class="main">
 
-            <section class="module">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-sm-8 col-sm-offset-2">
-                            <h1 class="module-title font-alt mb-0">글쓰기</h1>
-                            <h1></h1>
-                            <hr class="divider-w mt-10 mb-20">
-                            <form class="form" role="form">
-                                <div class="form-group">
-                                    <a>제목</a>
-                                    <input class="form-control input-lg" type="text" placeholder="제목을 입력해주세요"/>
-                                </div>
-                                <div class="form-group">
-                                    <input class="form-control" type="text" placeholder="파일명" disabled=""/>
-                                </div>
-
-                                <textarea class="form-control" rows="30" placeholder="내용을 입력해주세요"></textarea>
-                                <p></p>
-                                <button class="btn btn-b btn-round" type="submit" style=" text-align: center"><a style="color:white;">제출하기</a></button>
-                            </form>
-                        </div>
-                    </div>
-                </div>
+<div class="main" style="background-color: #f9f9f9
+">
+    <section class="module">
+        <div class="container">
+            <div class="row">
+            </div>
+            <section class="module-medium" id="contact">
+                <h1></h1>
             </section>
-
-
-    <!--        <div class="module-small bg-dark">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-sm-3">
-                            <div class="widget">
-                                <h5 class="widget-title font-alt">About Titan</h5>
-                                <p>The languages only differ in their grammar, their pronunciation and their most common words.</p>
-                                <p>Phone: +1 234 567 89 10</p>Fax: +1 234 567 89 10
-                                <p>Email:<a href="#">somecompany@example.com</a></p>
-                            </div>
-                        </div>
-                        <div class="col-sm-3">
-                            <div class="widget">
-                                <h5 class="widget-title font-alt">Recent Comments</h5>
-                                <ul class="icon-list">
-                                    <li>Maria on <a href="#">Designer Desk Essentials</a></li>
-                                    <li>John on <a href="#">Realistic Business Card Mockup</a></li>
-                                    <li>Andy on <a href="#">Eco bag Mockup</a></li>
-                                    <li>Jack on <a href="#">Bottle Mockup</a></li>
-                                    <li>Mark on <a href="#">Our trip to the Alps</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="col-sm-3">
-                            <div class="widget">
-                                <h5 class="widget-title font-alt">Blog Categories</h5>
-                                <ul class="icon-list">
-                                    <li><a href="#">Photography - 7</a></li>
-                                    <li><a href="#">Web Design - 3</a></li>
-                                    <li><a href="#">Illustration - 12</a></li>
-                                    <li><a href="#">Marketing - 1</a></li>
-                                    <li><a href="#">Wordpress - 16</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="col-sm-3">
-                            <div class="widget">
-                                <h5 class="widget-title font-alt">Popular Posts</h5>
-                                <ul class="widget-posts">
-                                    <li class="clearfix">
-                                        <div class="widget-posts-image"><a href="#"><img src="assets/images/rp-1.jpg" alt="Post Thumbnail"/></a></div>
-                                        <div class="widget-posts-body">
-                                            <div class="widget-posts-title"><a href="#">Designer Desk Essentials</a></div>
-                                            <div class="widget-posts-meta">23 january</div>
-                                        </div>
-                                    </li>
-                                    <li class="clearfix">
-                                        <div class="widget-posts-image"><a href="#"><img src="assets/images/rp-2.jpg" alt="Post Thumbnail"/></a></div>
-                                        <div class="widget-posts-body">
-                                            <div class="widget-posts-title"><a href="#">Realistic Business Card Mockup</a></div>
-                                            <div class="widget-posts-meta">15 February</div>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
+            <h2 style="text-align: center; color: #0C3664;letter-spacing: 4px; font-size: 35px ">글쓰기</h2>
+            <br>
+            <hr class="divider-w pt-20">
+            <form class="form" role="form">
+                <div class="form-group">
+                    <p style="font-size: 25px">제목</p>
+                    <input class="form-control input-lg" type="text" placeholder="제목을 입력해주세요"/>
                 </div>
-            </div>-->
-            <hr class="divider-d">
-            <footer class="footer bg-dark">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <p class="copyright font-alt">&copy; 2017&nbsp;<a href="index.html">TitaN</a>, All Rights Reserved</p>
-                        </div>
-                        <div class="col-sm-6">
-                            <div class="footer-social-links"><a href="#"><i class="fa fa-facebook"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-dribbble"></i></a><a href="#"><i class="fa fa-skype"></i></a>
-                            </div>
-                        </div>
-                    </div>
+                <div class="form-group">
+                    <input class="form-control" type="text" placeholder="파일명" disabled=""/>
                 </div>
-            </footer>
 
+                <textarea class="form-control" rows="30" placeholder="내용을 입력해주세요"></textarea>
+                <p></p>
+                <button class="btn btn-b btn-round" type="submit" style=" text-align: center; width: 100%; height: 50px"><a class="font-alt" style="color:white;font-size: 25px " href="community">제출하기</a></button>
+            </form>
         </div>
-        <div class="scroll-up"><a href="#totop"><i class="fa fa-angle-double-up"></i></a></div>
+</div>
+</div>
+</section>
 
-    </main>
 
-    <!--
-    JavaScripts
-    =============================================
-    -->
-    <script src="/resources/assets/lib/jquery/dist/jquery.js"></script>
-    <script src="/resources/assets/lib/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="/resources/assets/lib/wow/dist/wow.js"></script>
-    <script src="/resources/assets/lib/jquery.mb.ytplayer/dist/jquery.mb.YTPlayer.js"></script>
-    <script src="/resources/assets/lib/isotope/dist/isotope.pkgd.js"></script>
-    <script src="/resources/assets/lib/imagesloaded/imagesloaded.pkgd.js"></script>
-    <script src="/resources/assets/lib/flexslider/jquery.flexslider.js"></script>
-    <script src="/resources/assets/lib/owl.carousel/dist/owl.carousel.min.js"></script>
-    <script src="/resources/assets/lib/smoothscroll.js"></script>
-    <script src="/resources/assets/lib/magnific-popup/dist/jquery.magnific-popup.js"></script>
-    <script src="/resources/assets/lib/simple-text-rotator/jquery.simple-text-rotator.min.js"></script>
-    <script src="/resources/assets/js/plugins.js"></script>
-    <script src="/resources/assets/js/main.js"></script>
+<!--        <div class="module-small bg-dark">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-3">
+                        <div class="widget">
+                            <h5 class="widget-title font-alt">About Titan</h5>
+                            <p>The languages only differ in their grammar, their pronunciation and their most common words.</p>
+                            <p>Phone: +1 234 567 89 10</p>Fax: +1 234 567 89 10
+                            <p>Email:<a href="#">somecompany@example.com</a></p>
+                        </div>
+                    </div>
+                    <div class="col-sm-3">
+                        <div class="widget">
+                            <h5 class="widget-title font-alt">Recent Comments</h5>
+                            <ul class="icon-list">
+                                <li>Maria on <a href="#">Designer Desk Essentials</a></li>
+                                <li>John on <a href="#">Realistic Business Card Mockup</a></li>
+                                <li>Andy on <a href="#">Eco bag Mockup</a></li>
+                                <li>Jack on <a href="#">Bottle Mockup</a></li>
+                                <li>Mark on <a href="#">Our trip to the Alps</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-sm-3">
+                        <div class="widget">
+                            <h5 class="widget-title font-alt">Blog Categories</h5>
+                            <ul class="icon-list">
+                                <li><a href="#">Photography - 7</a></li>
+                                <li><a href="#">Web Design - 3</a></li>
+                                <li><a href="#">Illustration - 12</a></li>
+                                <li><a href="#">Marketing - 1</a></li>
+                                <li><a href="#">Wordpress - 16</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-sm-3">
+                        <div class="widget">
+                            <h5 class="widget-title font-alt">Popular Posts</h5>
+                            <ul class="widget-posts">
+                                <li class="clearfix">
+                                    <div class="widget-posts-image"><a href="#"><img src="assets/images/rp-1.jpg" alt="Post Thumbnail"/></a></div>
+                                    <div class="widget-posts-body">
+                                        <div class="widget-posts-title"><a href="#">Designer Desk Essentials</a></div>
+                                        <div class="widget-posts-meta">23 january</div>
+                                    </div>
+                                </li>
+                                <li class="clearfix">
+                                    <div class="widget-posts-image"><a href="#"><img src="assets/images/rp-2.jpg" alt="Post Thumbnail"/></a></div>
+                                    <div class="widget-posts-body">
+                                        <div class="widget-posts-title"><a href="#">Realistic Business Card Mockup</a></div>
+                                        <div class="widget-posts-meta">15 February</div>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>-->
+
+
+</div>
+
+</main>
+
+<!--
+JavaScripts
+=============================================
+-->
+<script src="/resources/assets/lib/jquery/dist/jquery.js"></script>
+<script src="/resources/assets/lib/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="/resources/assets/lib/wow/dist/wow.js"></script>
+<script src="/resources/assets/lib/jquery.mb.ytplayer/dist/jquery.mb.YTPlayer.js"></script>
+<script src="/resources/assets/lib/isotope/dist/isotope.pkgd.js"></script>
+<script src="/resources/assets/lib/imagesloaded/imagesloaded.pkgd.js"></script>
+<script src="/resources/assets/lib/flexslider/jquery.flexslider.js"></script>
+<script src="/resources/assets/lib/owl.carousel/dist/owl.carousel.min.js"></script>
+<script src="/resources/assets/lib/smoothscroll.js"></script>
+<script src="/resources/assets/lib/magnific-popup/dist/jquery.magnific-popup.js"></script>
+<script src="/resources/assets/lib/simple-text-rotator/jquery.simple-text-rotator.min.js"></script>
+<script src="/resources/assets/js/plugins.js"></script>
+<script src="/resources/assets/js/main.js"></script>
 </body>
 </html>
